--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+:root {
+  --red-color: rgb(237,27,36);
+  --global-font-family: Manrope, sans-serif;
+  
+}
+
 body {
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
