--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,5 +1,53 @@
 .wrapper{
     width: 100%;
-    height: 52px;
+    height: 100px;
     background-color: var(--red-color);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .wrapper__content{
+        width: 85%;
+        height: 100%;
+    
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    
+        
+        .wrapper__content__logo{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            .wrapper__content__logo__img{
+                height: 80%;
+            }
+            .wrapper__content__logo__name{
+                display: flex;
+                flex-direction: column;
+
+                .wrapper__content__logo__name__span{
+                    font-size: 28px;
+                    font-weight: 600;
+                    font-family: var(--global-font-family);
+                    color: white;
+                }
+            }
+        }
+        .wrapper__content__info{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            gap: 30px;
+
+            .wrapper__content__info__span{
+                font-size: 28px;
+                font-weight: 600;
+                color: white;
+            }
+        }
+    }
 }
