--- a/src/Components/SecondHeader/secondHeader.module.css
+++ b/src/Components/SecondHeader/secondHeader.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     width: 100%;
     height: 100px;
-    background-color: white;
+    background-color: var(--red-color);
 
     display: flex;
     align-items: center;
