--- a/src/Components/MainSection/mainSection.module.css
+++ b/src/Components/MainSection/mainSection.module.css
@@ -1,6 +1,6 @@
 .wrapper{
     width: 100%;
-    height: 100vh;
+    height: 650px;
     background-image: url('../../assets/images/serhii_main.jpg');
     background-position: center;
     background-size: cover;
@@ -9,6 +9,7 @@
     align-items: center;
 
     .wrapper__window{
+        position: relative;
         width: 50%;
         height: 60%;
         background-color: rgba(30,30,30,0.7);
@@ -17,6 +18,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        animation: windowAnimation 1s ease forwards;
 
         .wrapper__window__content{
             width: 85%;
@@ -62,5 +65,16 @@
                 background-color: rgb(238, 50, 60);
             }
         }
+    }
+}
+
+@keyframes windowAnimation {
+    0% {
+      left: -300px;
+      opacity: 0;
+    }
+    100% {
+      left: 0px;
+      opacity: 1;
     }
 }
