--- a/src/Components/СoachesFormats/coachesFormats.module.css
+++ b/src/Components/СoachesFormats/coachesFormats.module.css
@@ -20,14 +20,19 @@
             font-weight: 700;
             color: white;
         }
+        .wrapper__content__cardsBlock__hidden{
+            opacity: 0;
+            width: 100%;
+            overflow: hidden;
+        }
         .wrapper__content__cardsBlock{
-            
+            position: relative;
             width: 100%;
             height: 83%;
             display: flex;
             align-items: center;
             justify-content: center;
-
+            animation: cardsAnimation 2s ease forwards;
 
             .wrapper__content__cardsBlock__card{
                 width: 50%;
@@ -105,5 +110,16 @@
                 }
             }
         }
+    }
+}
+
+@keyframes cardsAnimation {
+    0% {
+      bottom: -300px;
+      opacity: 0;
+    }
+    100% {
+      bottom: 0px;
+      opacity: 1;
     }
 }
