--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -43,11 +43,89 @@
             align-items: center;
             gap: 30px;
 
+            .wrapper__content__info__svg{
+                width: 100%;
+                height: 100%;
+            }
+
             .wrapper__content__info__span{
                 cursor: pointer;
                 font-size: 28px;
                 font-weight: 600;
                 color: white;
+            }
+        }
+    }
+}
+
+.navWindow{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 75%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.979);
+    z-index: 2000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .navWindow__content{
+        border:  rgba(255, 255, 255, 0.164) solid 1px;
+        width: 90%;
+        height: 95%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .navWindow__content__itemClose svg{
+            color: white;
+            width: 30px;
+            height: 30px;
+            margin: 10px;
+        }
+        .navWindow__content__item{
+            color: white;
+            margin: 10px;
+            font-size: 25px;
+        }
+    }
+}
+
+@media (max-width: 1100px){
+    .wrapper{
+        height: 60px;
+        .wrapper__content{
+            .wrapper__content__logo{
+                height: 100%;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .wrapper__content__logo__img{
+                    height: 80%;
+                }
+                .wrapper__content__logo__name{
+                    display: flex;
+                    flex-direction: column;
+        
+                    .wrapper__content__logo__name__span{
+                        font-size: 20px;
+                        font-weight: 600;
+                        font-family: var(--global-font-family);
+                        color: white;
+                    }
+                }
+            }
+            .wrapper__content__info{
+                width: 50px;
+                height: 50px;
+                color: white;
+                cursor: pointer;
+            }
+            .wrapper__content__info svg{
+                width: 100%;
+                height: 100%;
             }
         }
     }
