--- a/src/Components/MainSection/mainSection.module.css
+++ b/src/Components/MainSection/mainSection.module.css
@@ -78,3 +78,294 @@
       opacity: 1;
     }
 }
+
+@media (max-width: 1300px){
+    .wrapper{
+        width: 100%;
+        height: 650px;
+        background-image: url('../../assets/images/serhii_main.jpg');
+        background-position: center;
+        background-size: cover;
+    
+        display: flex;
+        align-items: center;
+    
+        .wrapper__window{
+            position: relative;
+            width: 60%;
+            height: 60%;
+            background-color: rgba(30,30,30,0.7);
+            margin-left: 100px;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            animation: windowAnimation 1s ease forwards;
+    
+            .wrapper__window__content{
+                width: 85%;
+                height: 75%;
+    
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+    
+                .wrapper__window__content__main{
+                    font-size: 45px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 700;
+                    line-height: 108%;
+                }
+                .wrapper__window__content__description{
+                    font-size: 23px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 400;
+                    line-height: 141%;
+                }
+                .wrapper__window__content__button{
+                    color: rgba(255,255,255,1);
+                    background-color: var(--red-color);
+                    font-family: var(--global-font-family);
+                    outline: none;
+                    border: none;
+                    width: 70%;
+                    font-size: 16px;
+                    font-weight: 600;
+                    border-radius: 7px;
+                    padding-top: 20px;
+                    padding-left: 40px;
+                    padding-right: 40px;
+                    padding-bottom: 20px;
+                    box-shadow: 0 7px 10px -5px rgba(237,27,36,0.5);
+                    cursor: pointer;
+                    transition: 0.2s;
+                }
+                .wrapper__window__content__button:hover{
+                    background-color: rgb(238, 50, 60);
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1000px){
+    .wrapper{
+        width: 100%;
+        height: 650px;
+        background-image: url('../../assets/images/serhii_main.jpg');
+        background-position: center;
+        background-size: cover;
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        .wrapper__window{
+            position: relative;
+            width: 70%;
+            height: 60%;
+            background-color: rgba(30,30,30,0.7);
+            border-radius: 15px;
+            margin-left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            animation: windowAnimation 1s ease forwards;
+    
+            .wrapper__window__content{
+                width: 85%;
+                height: 75%;
+    
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+    
+                .wrapper__window__content__main{
+                    font-size: 39px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 700;
+                    line-height: 108%;
+                }
+                .wrapper__window__content__description{
+                    font-size: 20px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 400;
+                    line-height: 141%;
+                }
+                .wrapper__window__content__button{
+                    color: rgba(255,255,255,1);
+                    background-color: var(--red-color);
+                    font-family: var(--global-font-family);
+                    outline: none;
+                    border: none;
+                    width: 70%;
+                    font-size: 16px;
+                    font-weight: 600;
+                    border-radius: 7px;
+                    padding-top: 20px;
+                    padding-left: 40px;
+                    padding-right: 40px;
+                    padding-bottom: 20px;
+                    box-shadow: 0 7px 10px -5px rgba(237,27,36,0.5);
+                    cursor: pointer;
+                    transition: 0.2s;
+                }
+                .wrapper__window__content__button:hover{
+                    background-color: rgb(238, 50, 60);
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 700px){
+    .wrapper{
+        width: 100%;
+        height: 650px;
+        background-image: url('../../assets/images/serhii_main.jpg');
+        background-position: center;
+        background-size: cover;
+    
+        display: flex;
+        align-items: center;
+    
+        .wrapper__window{
+            position: relative;
+            width: 80%;
+            height: 60%;
+            background-color: rgba(30,30,30,0.7);
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+    
+            animation: windowAnimation 1s ease forwards;
+    
+            .wrapper__window__content{
+                width: 85%;
+                height: 75%;
+    
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+    
+                .wrapper__window__content__main{
+                    font-size: 35px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 700;
+                    line-height: 108%;
+                }
+                .wrapper__window__content__description{
+                    font-size: 20px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 400;
+                    line-height: 141%;
+                }
+                .wrapper__window__content__button{
+                    color: rgba(255,255,255,1);
+                    background-color: var(--red-color);
+                    font-family: var(--global-font-family);
+                    outline: none;
+                    border: none;
+                    width: 70%;
+                    font-size: 16px;
+                    font-weight: 600;
+                    border-radius: 7px;
+                    padding-top: 20px;
+                    padding-left: 40px;
+                    padding-right: 40px;
+                    padding-bottom: 20px;
+                    box-shadow: 0 7px 10px -5px rgba(237,27,36,0.5);
+                    cursor: pointer;
+                    transition: 0.2s;
+                }
+                .wrapper__window__content__button:hover{
+                    background-color: rgb(238, 50, 60);
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 500px){
+    .wrapper{
+        width: 100%;
+        height: 650px;
+        background-image: url('../../assets/images/serhii_main.jpg');
+        background-position: 80%;
+        background-size: cover;
+    
+        display: flex;
+        align-items: center;
+
+    
+        .wrapper__window{
+            position: relative;
+            width: 80%;
+            height: 70%;
+            background-color: rgba(30,30,30,0.7);
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+    
+            animation: windowAnimation 1s ease forwards;
+    
+            .wrapper__window__content{
+                width: 95%;
+                height: 85%;
+    
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 30px;
+    
+                .wrapper__window__content__main{
+                    font-size: 35px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 700;
+                    line-height: 108%;
+                }
+                .wrapper__window__content__description{
+                    font-size: 20px;
+                    color: white;
+                    font-family: var(--global-font-family);
+                    font-weight: 400;
+                    line-height: 141%;
+                }
+                .wrapper__window__content__button{
+                    color: rgba(255,255,255,1);
+                    background-color: var(--red-color);
+                    font-family: var(--global-font-family);
+                    outline: none;
+                    border: none;
+                    width: 70%;
+                    font-size: 14px;
+                    font-weight: 600;
+                    border-radius: 7px;
+                    padding-top: 15px;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    padding-bottom: 15px;
+                    box-shadow: 0 7px 10px -5px rgba(237,27,36,0.5);
+                    cursor: pointer;
+                    transition: 0.2s;
+                }
+                .wrapper__window__content__button:hover{
+                    background-color: rgb(238, 50, 60);
+                }
+            }
+        }
+    }
+}
