--- a/src/Components/Tagline/tagline.module.css
+++ b/src/Components/Tagline/tagline.module.css
@@ -38,3 +38,136 @@
         }
     }
 }
+
+@media (max-width: 1000px){
+    .wrapper{
+        width: 100%;
+        height: 800px;
+        /* background-color: var(--backgroung-white); */
+        background-color: rgba(21,21,21,255);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        .wrapper__content{
+            width: 90%;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            .wrapper__content__titleBlock{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 80%;
+                text-align: center;
+    
+                .wrapper__content__spanTitle{
+                    font-size: 40px;
+                    font-weight: 700;
+                    /* color: var(--text-color-base); */
+                    color: white;
+                }
+                .wrapper__content__spanTitle2{
+                    font-size: 52px;
+                    font-weight: 700;
+                    color: var(--red-color);
+                }
+            }
+            .wrapper__content__swiperBlock{
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 700px){
+    .wrapper{
+        width: 100%;
+        height: 800px;
+        /* background-color: var(--backgroung-white); */
+        background-color: rgba(21,21,21,255);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        .wrapper__content{
+            width: 90%;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            .wrapper__content__titleBlock{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 80%;
+                text-align: center;
+    
+                .wrapper__content__spanTitle{
+                    font-size: 35px;
+                    font-weight: 700;
+                    /* color: var(--text-color-base); */
+                    color: white;
+                }
+                .wrapper__content__spanTitle2{
+                    font-size: 45px;
+                    font-weight: 700;
+                    color: var(--red-color);
+                }
+            }
+            .wrapper__content__swiperBlock{
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px){
+    .wrapper{
+        width: 100%;
+        height: 800px;
+        /* background-color: var(--backgroung-white); */
+        background-color: rgba(21,21,21,255);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        .wrapper__content{
+            text-align: center;
+            width: 95%;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            .wrapper__content__titleBlock{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                text-align: center;
+    
+                .wrapper__content__spanTitle{
+                    font-size: 30px;
+                    font-weight: 700;
+                    /* color: var(--text-color-base); */
+                    color: white;
+                }
+                .wrapper__content__spanTitle2{
+                    font-size: 35px;
+                    font-weight: 700;
+                    color: var(--red-color);
+                }
+            }
+            .wrapper__content__swiperBlock{
+                width: 100%;
+            }
+        }
+    }
+}
