--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,8 +1,8 @@
 .footerWrapper{
     width: 100%;
-    height: 100hv; 
-    background-color: var(--black-color);
-    color: var(--white-color); 
+    height: 170px; 
+    background-color: var(--backgroung-darkest-gray);
+    color: white; 
 
     border: rgb(252, 153, 153) solid 2px;
 
@@ -17,33 +17,28 @@
 }
 
 .addres{
-    text-align: start;
     align-items: start;
     display: flex;
     flex-direction: column;
     justify-content:center;
     width: 40%;
-    line-height: 2px;
+    height: 100%;
     border: blue solid 1px;
-    /* background-color: var(--black-color); */
 }
 
 .addresName{
-    /* text-align: center;
+    display:flex;
     align-items: center;
-    display: flex;*/
-    flex-direction: column;
-    display: flex;
-    justify-content: start;
-    align-items: start;
-    border: green solid 1px;
+    justify-content: center;
+    border:  white solid 1px;
+    height: auto;    
     width: 100%;
     font-size: 52px;
     color: white;
-    font-family: var(--global-font-family);
 }
 
  .mapSection{
     width: 40%;
+    height: 100%;
     border: gold solid 1px;
 } 
