--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,10 +1,9 @@
 .footerWrapper{
     width: 100%;
-    height: 170px; 
+    height: 250px; 
     background-color: var(--backgroung-darkest-gray);
     color: white; 
 
-    border: rgb(252, 153, 153) solid 2px;
 
 
 }
@@ -17,20 +16,32 @@
 }
 
 .addres{
+    position: relative;
     align-items: start;
     display: flex;
     flex-direction: column;
     justify-content:center;
     width: 40%;
     height: 100%;
-    border: blue solid 1px;
+    gap: 5px;
+
+    .addres__item{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+    }
+    .addres__item svg{
+        color: var(--red-color);
+    }
 }
 
 .addresName{
+    top: 0;
+    position: absolute;
     display:flex;
     align-items: center;
     justify-content: center;
-    border:  white solid 1px;
     height: auto;    
     width: 100%;
     font-size: 52px;
@@ -40,5 +51,6 @@
  .mapSection{
     width: 40%;
     height: 100%;
-    border: gold solid 1px;
+    border-radius: 15px;
+    overflow: hidden;
 } 
