--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --text-color-base: #2f2f2f;
   --backgroung-dark-gray: rgba(30,30,30,1);
   --backgroung-white: rgba(247,241,251,1);
+  --backgroung-darkest-gray: rgba(21,21,21,255);
 }
 
 body {
