--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,6 +1,6 @@
 .footerWrapper{
     width: 100%;
-    height: 250px; 
+    height: 285px; 
     background-color: var(--backgroung-darkest-gray);
     color: white; 
 
@@ -18,9 +18,6 @@
 .addres{
     position: relative;
     align-items: start;
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
     width: 40%;
     height: 100%;
     gap: 5px;
@@ -37,8 +34,7 @@
 }
 
 .addresName{
-    top: 0;
-    position: absolute;
+    position: relative;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -50,7 +46,206 @@
 
  .mapSection{
     width: 40%;
-    height: 100%;
+    height: auto;
+    margin: 10px 0px 10px 0px;
     border-radius: 15px;
     overflow: hidden;
 } 
+
+@media (max-width: 1300px){
+    .content{
+        height: 100%;
+        gap: 5px;
+    }
+
+    .addresName{
+        position: relative;
+        font-size: 60px;   
+        width: 100%;
+        height: 23%;
+    }
+
+    .addres{
+        position: relative;
+        align-items: start;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 20px 0px;
+        font-size: 20px;
+        gap:10px;
+    }
+
+    .mapSection{
+        display: flex;
+        align-items: center;     
+        width: 50%;
+        height: auto;
+        margin: 20px 0px 20px 0px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+}
+
+@media (max-width: 1000px){
+    .content{
+        height: 100%;
+        gap: 5px;
+    }
+
+    .addresName{
+        position: relative;
+        font-size: 60px;   
+        width: 100%;
+        height: 23%;
+    }
+
+    .addres{
+        position: relative;
+        align-items: start;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 20px 0px;
+        font-size: 20px;
+        gap:10px;
+    }
+
+    .mapSection{
+        display: flex;
+        align-items: center;     
+        width: 50%;
+        height: auto;
+        margin: 20px 0px 20px 0px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+}
+
+
+@media (max-width: 700px){
+    .content{
+        height: 100%; 
+        gap: 5px;
+    }
+
+    .addresName{
+        position: relative;
+        font-size: 50px;
+        width: 100%;
+        height: 23%;
+    }
+
+    .addres{
+        position: relative;
+        align-items: start;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 20px 0px;
+        font-size: 17px;
+        gap:10px;
+    }
+
+    .mapSection{
+        display: flex;
+        align-items: center;
+        width: 50%;
+        height: auto;
+        margin: 10px 0px 20px 0px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+}
+
+
+
+@media (max-width: 500px){
+    .footerWrapper{
+        height: 210px;
+    }
+
+    .content{
+        height: 100%;
+        gap: 20px;
+        }
+
+    .addresName{
+        position: relative;
+        font-size: 45px;
+        width: 100%;
+        height: 23%;
+    }
+
+    .addres{
+        position: relative;
+        align-items: start;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 30px 0px;
+        font-size: 13px;
+        gap:10px;
+    }
+
+    .mapSection{
+        display: flex;
+        align-items: center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 10px 0px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+}
+
+
+
+@media (max-width: 405px){   
+    .content{
+        height: 100%;
+        gap: 14px;
+    }
+
+    .addresName{
+        position: relative;
+        font-size: 30px;
+        width: 100%;
+        height: 23%;
+    }
+
+    .addres{
+        position: relative;
+        align-items: start;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 20px 0px;
+        font-size: 13px;
+        gap:10px;
+    }
+
+    .mapSection{
+        display: flex;
+        align-items: center;
+        width: 45%;
+        height: auto;
+        margin: 10px 0px 10px 0px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+}
