--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -81,7 +81,7 @@
         font-size: 60px;   
         width: 100%;
         height: 23%;
-        top: -5%;
+        /* top: -5%; */
     }
 
     .addres{
