--- a/src/Components/FormatsSection/formatsSection.module.css
+++ b/src/Components/FormatsSection/formatsSection.module.css
@@ -1,6 +1,6 @@
 .wrapper{
     width: 100%;
-    height: 1200px;
+    height: auto;
     background-color: var(--backgroung-dark-gray);
     display: flex;
     align-items: center;
@@ -35,11 +35,12 @@
             align-items: center;
             justify-content: space-between;
             animation: cardsAnimation 2s ease forwards;
+            margin-bottom: 50px;
 
             .wrapper__content__cardsBlock__card{
                 width: 30%;
-                height: 100%;
-                background-color: white;
+                height: 500px;
+                background-color: var(--background-card-gray);
                 border-radius: 15px;
                 overflow: hidden;
                 display: flex;
@@ -127,7 +128,7 @@
             .wrapper__content__cardsBlock__card{
                 width: 50%;
                 height: 80%;
-                background-color: white;
+                background-color: var(--background-card-gray);
                 border-radius: 15px;
                 overflow: hidden;
                 display: flex;
@@ -145,7 +146,7 @@
                     justify-content: center;
 
                     .wrapper__content__cardsBlock__card__imgBlock__img{
-                        height: 100%;
+                        height: 250px;
                         width: 100%;
                         object-fit: cover;
                     }
@@ -259,7 +260,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 30%;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -346,7 +347,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 60%;
                     height: 75%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -471,7 +472,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 60%;
                     height: 90%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -599,7 +600,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 80%;
                     height: 90%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -690,7 +691,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 80%;
                     height: 75%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -817,7 +818,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 90%;
                     height: 90%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -908,7 +909,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 90%;
                     height: 75%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
