--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -6,6 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    z-index: 1000;
 
     .wrapper__content{
         width: 85%;
@@ -88,6 +90,7 @@
             color: white;
             margin: 10px;
             font-size: 25px;
+            cursor: pointer;
         }
     }
 }
