--- a/src/Components/СoachesFormats/coachesFormats.module.css
+++ b/src/Components/СoachesFormats/coachesFormats.module.css
@@ -37,7 +37,7 @@
             .wrapper__content__cardsBlock__card{
                 width: 50%;
                 height: 100%;
-                background-color: white;
+                background-color: var(--background-card-gray);
                 border-radius: 15px;
                 overflow: hidden;
                 display: flex;
@@ -168,7 +168,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 50%;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -289,7 +289,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 50%;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -412,7 +412,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 70%;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
@@ -534,7 +534,7 @@
                 .wrapper__content__cardsBlock__card{
                     width: 100%;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-card-gray);
                     border-radius: 15px;
                     overflow: hidden;
                     display: flex;
